--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,16 @@
   width: 70%;
   margin: auto;
   text-align: center;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .dice {
+  display: flex;
   text-align: center;
   display: inline-block;
-
 }
 
 body {
@@ -30,6 +34,37 @@ p {
 
 img {
   width: 80%;
+}
+
+a {
+  text-decoration: none; 
+  color: inherit;
+}
+
+button {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 18px;
+  font-weight: bold;
+  color: #fff;
+  width: fit-content;
+  background-color: #4CAF50;
+  border: 2px solid #4CAF50;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s, border-color 0.3s, transform 0.2s;
+}
+
+button:hover {
+  background-color: #45a049;
+  border-color: #45a049;
+  transform: scale(1.05);
+}
+
+button:active {
+  background-color: #3e8e41;
+  border-color: #3e8e41;
+  transform: scale(0.95);
 }
 
 footer {
